devops/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-work-3-db-deployment
  labels:
    app: otus-work-3-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-work-3-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: otus-work-3-db
    spec:
      containers:
      - name: postgres
        image: postgres:11
        ports:
          - containerPort: 5432
