devops/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-work-3-app-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: otus-work-3-app
  type: ClusterIP
