devops/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-work-3-db-service
spec:
  ports:
    - port: 15432
      targetPort: 5432
  selector:
    app: otus-work-3-db
  type: ClusterIP
