devops/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-work-3-app-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otus-work-3-app-service
            port:
              number: 80
  ingressClassName: nginx
